--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">WhatToBuy</string>
     <string name="fab_content_description">Add new shopping item</string>
+    <string name="error_input_count">error input count</string>
+    <string name="error_input_name">error_input_name</string>
 </resources>
